# helo

./: .gitignore  Cargo.toml  README.md  index.html  todo.txt
.github/workflows/: web.yml
assets/: DocumentLayout-C0LZckgA.js  DocumentLayout-D9Ik2p9h.js  DocumentLayout-DuWzdqcR.js  DocumentLayout-TzimZJkj.js  EditorLayout-B93_rv-t.js  EditorLayout-C25spQ0A.js  EditorLayout-Ch4PtnvW.js  EditorLayout-WpcVJDKh.js  ErrorNotFound-BG8BP_na.js  ErrorNotFound-DM0IqnpG.js  ErrorNotFound-DklUEh1x.js  ErrorNotFound-YKBa3Ypa.js  NavigationButtons-1B0Mayvj.js  NavigationButtons-Cu1flcta.js  NavigationButtons-Df3x0Hej.js  NavigationButtons-DxIbyc91.js  PlayGround-ByfgStqG.js  PlayGround-CWbEsUBC.js  PlayGround-Clh7w6at.js  PlayGround-DJiHJlkP.js  PlayGround-DQhQNIhI.css  PlayGround-elD5Dvmp.css  QBtn-B628EINK.js  QBtn-CVSt3djh.js  QBtn-DCnwbdmd.js  QBtn-DKy_yooC.js  QCard-B49l-k4v.js  QCard-BErQhV2q.js  QCard-DgAS53pM.js  QCard-e3BSHyBw.js  QScrollObserver-B-90Bz8d.js  QScrollObserver-C9H9M275.js  QScrollObserver-CNI9KVLI.js  QScrollObserver-CRQL0R-Z.js  RefArchitecture-B4xlhfXT.js  RefArchitecture-DFxS5sQo.js  RefArchitecture-DekZv2r1.js  RefArchitecture-hixx2EYP.js  RefBasics-BlX9CBHY.js  RefBasics-CN6UC2XV.js  (+39 more)
crates/helo_bin/: Cargo.toml
crates/helo_ir/: Cargo.toml
crates/helo_ir/src/: artifect.rs  elimination.rs  errors.rs  ir.rs  lib.rs  lifetime.rs  lir.rs  lower_ast.rs  lower_ir.rs  lower_lir.rs  pretty_print.rs
crates/helo_ir/src/ir/: optimizations.rs
crates/helo_ir/src/lir/: optimizations.rs  ssa.rs
crates/helo_macro/: Cargo.toml
crates/helo_macro/src/: lib.rs
crates/helo_parse/: Cargo.toml
crates/helo_parse/src/: ast.rs  builtin_defs.helo  builtins.rs  constrain.rs  errors.rs  infer.rs  inferer.rs  lib.rs  parse.rs  source_tree.rs  typed.rs
crates/helo_parse/src/parse/: context.rs  lower_tast.rs  tast.rs
crates/helo_runtime/: Cargo.toml  expand.txt
crates/helo_runtime/src/: builtins.rs  byte_code.rs  disassembler.rs  errors.rs  executable.rs  lib.rs  mem.rs  vm.rs
crates/helo_runtime/src/builtins/: functions.rs
crates/helo_runtime/src/mem/: array.rs  callable.rs  gc.rs  list.rs  objects.rs  string.rs  value.rs
crates/helo_wasm/: Cargo.toml  build.sh
crates/helo_wasm/src/: lib.rs
firedbg/: target.json  version.toml
helo_scripts/: anonymous_closure.helo  avl.helo  binomial_heap.helo  byte_code.helo  calculator.helo  case.helo  curried.helo  error_monad.helo  infinite.helo  infix_constructor.helo  let_in.helo  module.helo  recursion.helo  relation.helo  test.helo
helo_scripts/module/: animals.helo
src/: lib.rs
web/: .eslintignore  .eslintrc.cjs  README.md  index.html  package.json  podman-node.sh  quasar.config.ts
web/src/: App.vue
web/src/components/: EmbededPlayGround.vue  NavigationButtons.vue  PlayGround.vue  TextBody1.vue  TextCode.vue  TextHeader1.vue  TextHeader2.vue
web/src/css/: quasar.variables.scss
web/src/layouts/: DocumentLayout.vue  EditorLayout.vue
web/src/pages/: ErrorNotFound.vue  RefArchitecture.vue  RefBasics.vue  RefClosures.vue  RefIntroduction.vue  RefModule.vue  RefRelation.vue
web/src/router/: routes.ts
