[package]
name = "helo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helo_run"
required-features = ["helo_ir/pretty_print"]


[dependencies]
pretty = { version = "*" }
helo_ir = { path = "crates/helo_ir" }
helo_runtime = { path = "crates/helo_runtime" }
helo_parse = { path = "crates/helo_parse" }
miette = { version = "*", features = ["fancy"] }

[workspace]
members = ["crates/*"]
