[package]
name = "helo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "helo_driver"

[features]
stage-value-enum = ["clap"]
stage-wasm-bindgen = ["wasm-bindgen"]


[dependencies]
helo_ir = { path = "crates/helo_ir" }
helo_runtime = { path = "crates/helo_runtime" }
helo_parse = { path = "crates/helo_parse" }

wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

miette.workspace = true

[workspace]
members = ["crates/*"]

[workspace.dependencies]
miette = { version = "7.2", default-features = false }
imbl = "2.0"
thiserror = "1.0"
