[package]
name = "helo_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
helo = { path = "../../" }
helo_runtime = { path = "../helo_runtime" }
helo_parse = { path = "../helo_parse" }
terminal_size = { version = "0.3", optional = true }
clap = { version = "4.5", features = ["derive"] }

miette.workspace = true

[features]
default = [
    "miette/fancy",
    "helo/stage-value-enum"
]

[[bin]]
name = "helo_vm"

[[bin]]
name = "heloc"
required-features = ["terminal_size"]

