[package]
name = "helo_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["pretty_print"]
pretty_print = ["terminal_size", "pretty", "miette/fancy"]

[dependencies]
helo_parse = { path = "../helo_parse" }
helo_runtime = { path = "../helo_runtime" }
miette = "5.10"
thiserror = "1.0"
imbl = "2.0"
pretty = { version = "0.12", optional = true }
terminal_size = { version = "0.3", optional = true }
