[package]
name = "helo_ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pretty_print = ["pretty"]
default = ["pretty_print"]

[dependencies]
helo_parse = { path = "../helo_parse" }
helo_runtime = { path = "../helo_runtime" }
pretty = { version = "0.12", optional = true }

imbl.workspace = true
thiserror.workspace = true
miette.workspace = true
