[package]
name = "helo_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helo_infer_type"
required-features = ["fancy_miette"]

[features]
fancy_miette = ["miette/fancy"]

[dependencies]
miette = "5.10"
imbl = "2.0"
thiserror = "1.0"
nom = "7.1"
